5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1807_2566.log
== TEST (2019-06-13 10:33:50) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	if vet[i] == 2:
		sub[0]+= 1
	elif vet[i]== 3:
		sub[1]+= 1
	elif vet[i]== 4:
		sub[2]+= 1
	elif vet[i]== 5:
		sub[3]+= 1
	elif vet[i]== 6:
		sub[4]+= 1
	elif vet[i]== 7:
		sub[5]+= 1
print(sub)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:37:50) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	if vet[i] == 2:
		sub[0]+= (1 /(size(vet))
	elif vet[i]== 3:
		sub[1]+= 1 
	elif vet[i]== 4:
		sub[2]+= 1
	elif vet[i]== 5:
		sub[3]+= 1
	elif vet[i]== 6:
		sub[4]+= 1
	elif vet[i]== 7:
		sub[5]+= 1
print(sub)		
-- ERROR:
File "XXXX", line 9
    elif vet[i]== 3:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:38:17) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	if vet[i] == 2:
		sub[0]+= 1 /(size(vet)
	elif vet[i]== 3:
		sub[1]+= 1 
	elif vet[i]== 4:
		sub[2]+= 1
	elif vet[i]== 5:
		sub[3]+= 1
	elif vet[i]== 6:
		sub[4]+= 1
	elif vet[i]== 7:
		sub[5]+= 1
print(sub)		
-- ERROR:
File "XXXX", line 9
    elif vet[i]== 3:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:38:47) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	bb = size(vet)
	if vet[i] == 2:
		sub[0]+= 1 / bb
	elif vet[i]== 3:
		sub[1]+= 1 
	elif vet[i]== 4:
		sub[2]+= 1
	elif vet[i]== 5:
		sub[3]+= 1
	elif vet[i]== 6:
		sub[4]+= 1
	elif vet[i]== 7:
		sub[5]+= 1
print(sub)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:39:24) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	bb = size(vet)
	if vet[i] == 2:
		sub[0]+= 1 / bb
	elif vet[i]== 3:
		sub[1]+= 1 
	elif vet[i]== 4:
		sub[2]+= 1
	elif vet[i]== 5:
		sub[3]+= 1
	elif vet[i]== 6:
		sub[4]+= 1
	elif vet[i]== 7:
		sub[5]+= 1
print(sub)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:39:47) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	bb = size(vet)
	if vet[i] == 2:
		sub[0]+= 1 
	elif vet[i]== 3:
		sub[1]+= 1 
	elif vet[i]== 4:
		sub[2]+= 1
	elif vet[i]== 5:
		sub[3]+= 1
	elif vet[i]== 6:
		sub[4]+= 1
	elif vet[i]== 7:
		sub[5]+= 1
print(sub)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:40:04) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	
	if vet[i] == 2:
		sub[0]+= 1 
	elif vet[i]== 3:
		sub[1]+= 1 
	elif vet[i]== 4:
		sub[2]+= 1
	elif vet[i]== 5:
		sub[3]+= 1
	elif vet[i]== 6:
		sub[4]+= 1
	elif vet[i]== 7:
		sub[5]+= 1
print(sub)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:40:29) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	if vet[i] == 2:
		sub[0]+= 1 
	elif vet[i]== 3:
		sub[1]+= 1 
	elif vet[i]== 4:
		sub[2]+= 1
	elif vet[i]== 5:
		sub[3]+= 1
	elif vet[i]== 6:
		sub[4]+= 1
	elif vet[i]== 7:
		sub[5]+= 1
print(sub)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:40:56) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	if vet[i] == 2:
		sub[0]+= 1 
	elif vet[i]== 3:
		sub[1]+= 1 
	elif vet[i]== 4:
		sub[2]+= 1
	elif vet[i]== 5:
		sub[3]+= 1
	elif vet[i]== 6:
		sub[4]+= 1
	elif vet[i]== 7:
		sub[5]+= 1
print(sub)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:41:16) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	if vet[i] == 2:
		sub[0]+= 1 
	elif vet[i]== 3:
		sub[1]+= 1 
	elif vet[i]== 4:
		sub[2]+= 1
	elif vet[i]== 5:
		sub[3]+= 1
	elif vet[i]== 6:
		sub[4]+= 1
	elif vet[i]== 7:
		sub[5]+= 1
print(sub)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:41:41) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	if vet[i] == 2:
		sub[0]+= 1 
	elif vet[i]== 3:
		sub[1]+= 1 
	elif vet[i]== 4:
		sub[2]+= 1
	elif vet[i]== 5:
		sub[3]+= 1
	elif vet[i]== 6:
		sub[4]+= 1
	elif vet[i]== 7:
		sub[5]+= 1
print(sub)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:42:01) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	if vet[i] == 2:
		sub[0]+= 1 
	elif vet[i]== 3:
		sub[1]+= 1 
	elif vet[i]== 4:
		sub[2]+= 1
	elif vet[i]== 5:
		sub[3]+= 1
	elif vet[i]== 6:
		sub[4]+= 1
	elif vet[i]== 7:
		sub[5]+= 1
print(sub)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:43:34) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	bb = size(vet)
	if vet[i] == 2:
		sub[0]+= 1 / (bb  * 100)
	elif vet[i]== 3:
		sub[1]+= 1 
	elif vet[i]== 4:
		sub[2]+= 1
	elif vet[i]== 5:
		sub[3]+= 1
	elif vet[i]== 6:
		sub[4]+= 1
	elif vet[i]== 7:
		sub[5]+= 1
print(sub)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:46:35) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	bb = size(vet)
	if vet[i] == 2:
		sub[0]+= 1 
	elif vet[i]== 3:
		sub[1]+= 1 
	elif vet[i]== 4:
		sub[2]+= 1
	elif vet[i]== 5:
		sub[3]+= 1
	elif vet[i]== 6:
		sub[4]+= 1
	elif vet[i]== 7:
		sub[5]+= 1
for e in range(size(sub)):
	sub[e]= sub[e] / bb
print(sub)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:48:12) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	bb = size(vet)
	if vet[i] == 2:
		sub[0]= sub[0] + 1 / bb 
	elif vet[i]== 3:
		sub[1]+= 1 
	elif vet[i]== 4:
		sub[2]+= 1
	elif vet[i]== 5:
		sub[3]+= 1
	elif vet[i]== 6:
		sub[4]+= 1
	elif vet[i]== 7:
		sub[5]+= 1

print(sub)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:48:24) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	bb = size(vet)
	if vet[i] == 2:
		sub[0]= sub[0] + 1 / bb 
	elif vet[i]== 3:
		sub[1]+= 1 
	elif vet[i]== 4:
		sub[2]+= 1
	elif vet[i]== 5:
		sub[3]+= 1
	elif vet[i]== 6:
		sub[4]+= 1
	elif vet[i]== 7:
		sub[5]+= 1

print(sub)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:48:53) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	bb = size(vet)
	if vet[i] == 2:
		sub[0]= sub[0] + 1 / bb * 100
	elif vet[i]== 3:
		sub[1]+= 1 
	elif vet[i]== 4:
		sub[2]+= 1
	elif vet[i]== 5:
		sub[3]+= 1
	elif vet[i]== 6:
		sub[4]+= 1
	elif vet[i]== 7:
		sub[5]+= 1

print(sub)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:49:19) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	bb = size(vet)
	if vet[i] == 2:
		sub[0]= sub[0] + 1 / bb * 100
	elif vet[i]== 3:
		sub[1]+= 1 / bb * 100
	elif vet[i]== 4:
		sub[2]+= 1 / bb * 100
	elif vet[i]== 5:
		sub[3]+= 1 / bb * 100
	elif vet[i]== 6:
		sub[4]+= 1 / bb * 100
	elif vet[i]== 7:
		sub[5]+= 1 / bb * 100

print(sub)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:50:34) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	bb = size(vet)
	if vet[i] == 2:
		sub[0]= sub[0] + 1 / bb * 100
	elif vet[i]== 3:
		sub[1]+= 1 / bb * 100
	elif vet[i]== 4:
		sub[2]+= 1 / bb * 100
	elif vet[i]== 5:
		sub[3]+= 1 / bb * 100
	elif vet[i]== 6:
		sub[4]+= 1 / bb * 100
	elif vet[i]== 7:
		sub[5]+= 1 / bb * 100

print(sub)	
-- EXECUTION TIME:
0.894636
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 24 36]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[14  7 21  7 14 28]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:50:49) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=float)

for i in range(size(vet)):
	bb = size(vet)
	if vet[i] == 2:
		sub[0]= sub[0] + 1 / bb * 100
	elif vet[i]== 3:
		sub[1]+= 1 / bb * 100
	elif vet[i]== 4:
		sub[2]+= 1 / bb * 100
	elif vet[i]== 5:
		sub[3]+= 1 / bb * 100
	elif vet[i]== 6:
		sub[4]+= 1 / bb * 100
	elif vet[i]== 7:
		sub[5]+= 1 / bb * 100

print(sub)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:51:09) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=float)

for i in range(size(vet)):
	bb = size(vet)
	if vet[i] == 2:
		sub[0]= sub[0] + 1 / bb * 100
	elif vet[i]== 3:
		sub[1]+= 1 / bb * 100
	elif vet[i]== 4:
		sub[2]+= 1 / bb * 100
	elif vet[i]== 5:
		sub[3]+= 1 / bb * 100
	elif vet[i]== 6:
		sub[4]+= 1 / bb * 100
	elif vet[i]== 7:
		sub[5]+= 1 / bb * 100

print(sub)	
-- EXECUTION TIME:
0.753744
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:51:55) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	bb = size(vet)
	if vet[i] == 2:
		sub[0]= sub[0] + 1 / bb * 100
	elif vet[i]== 3:
		sub[1]+= 1 / bb * 100
	elif vet[i]== 4:
		sub[2]+= 1 / bb * 100
	elif vet[i]== 5:
		sub[3]+= 1 / bb * 100
	elif vet[i]== 6:
		sub[4]+= 1 / bb * 100
	elif vet[i]== 7:
		sub[5]+= 1 / bb * 100

print(sub)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:51:59) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	bb = size(vet)
	if vet[i] == 2:
		sub[0]= sub[0] + 1 / bb * 100
	elif vet[i]== 3:
		sub[1]+= 1 / bb * 100
	elif vet[i]== 4:
		sub[2]+= 1 / bb * 100
	elif vet[i]== 5:
		sub[3]+= 1 / bb * 100
	elif vet[i]== 6:
		sub[4]+= 1 / bb * 100
	elif vet[i]== 7:
		sub[5]+= 1 / bb * 100

print(sub)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:52:03) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=int)

for i in range(size(vet)):
	bb = size(vet)
	if vet[i] == 2:
		sub[0]= sub[0] + 1 / bb * 100
	elif vet[i]== 3:
		sub[1]+= 1 / bb * 100
	elif vet[i]== 4:
		sub[2]+= 1 / bb * 100
	elif vet[i]== 5:
		sub[3]+= 1 / bb * 100
	elif vet[i]== 6:
		sub[4]+= 1 / bb * 100
	elif vet[i]== 7:
		sub[5]+= 1 / bb * 100

print(sub)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:52:31) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=float)

for i in range(size(vet)):
	bb = size(vet)
	if vet[i] == 2:
		sub[0]= sub[0] + 1 / bb * 100
	elif vet[i]== 3:
		sub[1]+= 1 / bb * 100
	elif vet[i]== 4:
		sub[2]+= 1 / bb * 100
	elif vet[i]== 5:
		sub[3]+= 1 / bb * 100
	elif vet[i]== 6:
		sub[4]+= 1 / bb * 100
	elif vet[i]== 7:
		sub[5]+= 1 / bb * 100

print(sub)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:54:05) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=float)

for i in range(size(vet)):
	bb = size(vet)
	if vet[i] == 2:
		sub[0]= sub[0] + 1 / bb * 100
	elif vet[i]== 3:
		sub[1]+= 1 / bb * 100
	elif vet[i]== 4:
		sub[2]+= 1 / bb * 100
	elif vet[i]== 5:
		sub[3]+= 1 / bb * 100
	elif vet[i]== 6:
		sub[4]+= 1 / bb * 100
	elif vet[i]== 7:
		sub[5]+= 1 / bb * 100

for i in sub:
	sub[i] = round(sub[i], 1)
print(sub)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:54:57) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=float)

for i in range(size(vet)):
	bb = size(vet)
	if vet[i] == 2:
		sub[0]= sub[0] + 1 / bb * 100
	elif vet[i]== 3:
		sub[1]+= 1 / bb * 100
	elif vet[i]== 4:
		sub[2]+= 1 / bb * 100
	elif vet[i]== 5:
		sub[3]+= 1 / bb * 100
	elif vet[i]== 6:
		sub[4]+= 1 / bb * 100
	elif vet[i]== 7:
		sub[5]+= 1 / bb * 100

for i in sub:
	sub = round (i, 1)
print(sub)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:55:49) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=float)

for i in range(size(vet)):
	bb = size(vet)
	if vet[i] == 2:
		sub[0]= sub[0] + 1 / bb * 100
	elif vet[i]== 3:
		sub[1]+= 1 / bb * 100
	elif vet[i]== 4:
		sub[2]+= 1 / bb * 100
	elif vet[i]== 5:
		sub[3]+= 1 / bb * 100
	elif vet[i]== 6:
		sub[4]+= 1 / bb * 100
	elif vet[i]== 7:
		sub[5]+= 1 / bb * 100

for i in range(size(sub)):
	sub[i] = round(sub[i], 1)
print(sub)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 10:56:02) 
-- CODE:
from numpy import *

vet = array(eval(input("Entrada: ")))
sub = zeros(6,dtype=float)

for i in range(size(vet)):
	bb = size(vet)
	if vet[i] == 2:
		sub[0]= sub[0] + 1 / bb * 100
	elif vet[i]== 3:
		sub[1]+= 1 / bb * 100
	elif vet[i]== 4:
		sub[2]+= 1 / bb * 100
	elif vet[i]== 5:
		sub[3]+= 1 / bb * 100
	elif vet[i]== 6:
		sub[4]+= 1 / bb * 100
	elif vet[i]== 7:
		sub[5]+= 1 / bb * 100

for i in range(size(sub)):
	sub[i] = round(sub[i], 1)
print(sub)	
-- EXECUTION TIME:
1.03491
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
